--- a/Sidebar.html
+++ b/Sidebar.html
@@ -1195,7 +1195,7 @@
     </div>
   </div>
 
-  <script></script>
+  <script>
     // --- Global Variables ---
     let currentElementId = null;
     let currentElementDescription = null; // Keep raw description
