--- a/WebApp.html
+++ b/WebApp.html
@@ -1676,7 +1676,7 @@
 
         // Re-enable main nav buttons after a delay
         setTimeout(() => {
-            forceEnableNavigation            forceEnableNavigationButtons();
+            forceEnableNavigationButtons();
         }, 100);
 
         logDebug("[WebApp] Spotlight hidden.");
