--- a/EditorView.html
+++ b/EditorView.html
@@ -554,7 +554,7 @@
 
   <script id="projectData" type="application/json"><?= projectJson ?></script>
   
-  <?!= include('Utils'); ?> <?!= include('ConfigClient'); ?> <?!= include('canvas-editor'); ?>
+  <?!= include('UtilsClient'); ?> <?!= include('ConfigClient'); ?> <?!= include('canvas-editor'); ?>
   <?!= include('element-factory'); ?>
   <?!= include('property-panel'); ?>
   
