--- a/EditorView.html
+++ b/EditorView.html
@@ -10,6 +10,27 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
   
+  <script>
+    console.log("EditorView.html loading at:", new Date().toISOString());
+    // Log URL parameters
+    console.log("URL:", window.location.href);
+    console.log("Project ID from URL:", new URLSearchParams(window.location.search).get('project'));
+    
+    // Add global error handler
+    window.onerror = function(message, source, lineno, colno, error) {
+      console.error("Global error:", message, "at", source, "line", lineno);
+      // Display visible error on page
+      document.body.innerHTML = `
+        <div style="color:red; padding:20px; font-family:sans-serif">
+          <h2>Error Loading Editor</h2>
+          <p>${message}</p>
+          <p>Source: ${source}</p>
+          <p>Line: ${lineno} Column: ${colno}</p>
+        </div>
+      `;
+      return false; // Allow default error handling too
+    };
+  </script>
   <style>
     /* Editor-specific styles from original file */
     body {
