fixed spelling error

--- a/ProjectSelector.html
+++ b/ProjectSelector.html
@@ -144,7 +144,7 @@
         
         // Then load projects with a small delay to ensure API is ready
         //setTimeout(loadProjects, 500);
-        loadprojects();
+        loadProjects();
     });
     
     // Create project button
