--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -1,1 +1,52 @@
-<h1>Admin View</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <base target="_top">
+    <title>Admin Dashboard</title>
+    <!-- Basic CSS - will be expanded and moved to Admin_CSS.html later -->
+    <style>
+      body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
+      .container { background-color: #fff; padding: 20px; margin-bottom: 20px; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+      label { display: inline-block; margin-bottom: 5px; font-weight: bold;}
+      input[type="text"] { width: calc(100% - 22px); padding: 10px; margin-bottom: 10px; border: 1px solid #ddd; border-radius: 3px; box-sizing: border-box; }
+      button { padding: 10px 15px; cursor: pointer; background-color: #007bff; color: white; border: none; border-radius: 3px; }
+      button:hover { background-color: #0056b3; }
+      #messageArea { margin-top: 15px; padding: 10px; border: 1px solid transparent; border-radius: 3px; }
+      .success { border-color: green; background-color: #e6ffe6; color: green; }
+      .error { border-color: red; background-color: #ffe6e6; color: red; }
+      /* Styles for loading spinner - make sure LoadingSpinner.html is created */
+      #loadingSpinner { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(255,255,255,0.7); z-index:10000; justify-content:center; align-items:center; }
+      .loader { border: 8px solid #f3f3f3; border-top: 8px solid #007bff; border-radius: 50%; width: 60px; height: 60px; animation: spin 1s linear infinite; }
+      @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    </style>
+  </head>
+  <body>
+    <h1>Admin Dashboard</h1>
+
+    <div class="container" id="createProjectSection">
+      <h2>Create New Project</h2>
+      <label for="projectTitleInput">Project Title:</label>
+      <input type="text" id="projectTitleInput" placeholder="Enter project title">
+      <button id="createProjectButton">Create Project</button>
+    </div>
+
+    <div id="messageArea"></div>
+
+    <!-- Hidden sections for later steps -->
+    <div class="container" id="projectListSection" style="display:none;">
+        <h2>Existing Projects</h2>
+        <div id="adminProjectListContainer"></div>
+    </div>
+    
+    <div class="container" id="editProjectSection" style="display:none;">
+        <h2 id="editingProjectTitle">Editing Project: </h2>
+        <button id="backToProjectsListButton" style="display:none;">Back to Projects List</button>
+    </div>
+
+    <!-- Include Loading Spinner -->
+    <?!= include('Client/Shared/LoadingSpinner'); ?>
+
+    <!-- Client-side JavaScript -->
+    <?!= include('Client/Admin/Admin_JS'); ?> 
+  </body>
+</html>
