--- a/Client/Admin/Admin_JS.html
+++ b/Client/Admin/Admin_JS.html
@@ -88,7 +88,7 @@
       google.script.run
         .withSuccessHandler(onProjectCreated)
         .withFailureHandler(onServerError)
-        .AdminController.createProject(projectTitle);
+        .createProject(projectTitle);
     }
   
     function onProjectCreated(response) {
